--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "4.2.2",
     "active_storage_drag_and_drop": "^0.4.1",
     "jquery": "^3.5.1",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
